2005-10-26  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/WorldEmberEntity.*, src/components/ogre/PersonEmberEntity.*, src/components/ogre/EmberPhysicalEntity.*, src/components/ogre/AvatarEmberEntity.* src/components/ogre/EmberEntity.*: adapt to changes in Eris with regards to GameEntity being replaced with RootEntity
	* src/components/ogre/EmberEntityFactory.*
		* adapt to changes in Eris with regards to GameEntity being replaced with RootEntity
		* use the sigc 2.0 methods, which allows us to use the very nice sigc::trackable class and doesn't require all classes to inherit from SigC::Object

2005-10-26  Erik Hjortsberg  <erik@katastrof.nu>

	* src/extensions/Atlas/Operations/Use.*, src/extensions/Atlas/Operations/Wield.*: removed obsolete code, these are now in Atlas

2005-10-26  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/cs, src/components/debug: removed obsolete code

2005-10-26  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/scripting/*: scripting module, provides lua bindings for the main Ember system through tolua++. Very much unfinished right now, and thus disabled.

2005-10-26  Erik Hjortsberg  <erik@katastrof.nu>

	* src/services/ServerService.*: 
		* adapted to changes in new release of Eris
		* use the Avatar methods for wielding and using

2005-10-26  Erik Hjortsberg  <erik@katastrof.nu>

	* src/services/font, src/services/platform: removed obsolete code. This is replaced by the ogre code.

2005-10-26  Erik Hjortsberg  <erik@katastrof.nu>

	* src/services/Makefile.am, src/services/scripting/Makefile.am, src/services/scripting/ScriptingService.*: new sevice for scripting

2005-10-26  Erik Hjortsberg  <erik@katastrof.nu>

	* configure.ac: bumped version number, added switch for lua, increased required versions of the WF libs

2005-10-14  Erik Hjortsberg  <erik@katastrof.nu>
